--- a/ShoppersParadiseMailingServiceApp/Views/Shared/_Layout.cshtml
+++ b/ShoppersParadiseMailingServiceApp/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                 </button>
                 <hr />
                 <footer>
-                    <p>&copy; @DateTime.Now.Year - Developed-Designed-Optimized By Julio Rodriguez</p>
+                    <p>&copy; @DateTime.Now.Year - Developed-Designed-Optimized By SPZ</p>
                 </footer>
             </div>
             <div class="navbar-collapse collapse">
