Added Post a message link

--- a/ShoppersParadiseMailingServiceApp/Views/Shared/_Layout.cshtml
+++ b/ShoppersParadiseMailingServiceApp/Views/Shared/_Layout.cshtml
@@ -19,9 +19,10 @@
                 @Html.ActionLink("ShoppersParadiseEmailMarketing", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav">                    
                     <li>@Html.ActionLink("Subscribe", "Create", "Subscribe")</li>
                     <li>@Html.ActionLink("UnSubscribe", "Create", "UnSubscribe")</li>
+                    <li>@Html.ActionLink("Post", "Create", "Post a message")</li>
                 </ul>
                 <hr />
             </div>
