changed the Post

--- a/ShoppersParadiseMailingServiceApp/Views/Shared/_Layout.cshtml
+++ b/ShoppersParadiseMailingServiceApp/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">                    
                     <li>@Html.ActionLink("Subscribe", "Create", "Subscribe")</li>
                     <li>@Html.ActionLink("UnSubscribe", "Create", "UnSubscribe")</li>
-                    <li>@Html.ActionLink("Post", "Create", "Post a message")</li>
+                    <li>@Html.ActionLink("Post a message", "Create", "Post")</li>
                 </ul>
                 <hr />
             </div>
