Added Company Model, Service and Views

--- a/ShoppersParadiseMailingServiceApp/Views/Shared/_Layout.cshtml
+++ b/ShoppersParadiseMailingServiceApp/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li>@Html.ActionLink("Subscribe", "Create", "Subscribe")</li>
                     <li>@Html.ActionLink("UnSubscribe", "Create", "UnSubscribe")</li>
                     <li>@Html.ActionLink("Post a message", "Create", "Post")</li>
+                    <li>@Html.ActionLink("Add your company", "Create", "Company")</li>
                 </ul>
                 <hr />
             </div>
